# corpclaw-lite

./: .coverage  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_RU.md  ROADMAP.md  SECURITY.md  builtin_coverage.txt  coverage_report.txt  main.py  pyproject.toml
.codex/: config.toml  hooks.json
.githooks/: pre-push
.github/workflows/: ci.yml
.jules/: sentinel.md
.opencode/plans/: 2026-03-25-hermes-integration-implementation.md  2026-04-09-code-review-fixes.md  2026-04-10-code-review-fixes.md  2026-04-10-documentation-audit.md
config/: calibration_scenarios.yaml  departments.yaml  eval_scenarios.yaml  mcp_servers.yaml  model_presets.yaml  network_policy.yaml  settings.yaml  tool_guard_rules.yaml
config/bootstrap/: BEHAVIOR.md  COMPANY.md  SOUL.md
config/bootstrap/departments/: admin.md  analytics.md  default.md  development.md  engineering.md  finance.md  hr.md  it.md  marketing.md  product.md
config/calibrated/: few_shots.yaml
config/eval/: judge_turn.md
config/subagents/: data-agent.yaml  document-agent.yaml  execution-agent.yaml  filesystem-agent.yaml  research-agent.yaml
docker/: Dockerfile  Dockerfile.agent  seccomp_default.json
docs/: ARCHITECTURE.md  REFERENCE_IDEAS_ANALYSIS.md
frontend/web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
plans/: 2026-04-09-coverage-75.md  2026-04-14-audit-implementation-plan.md  2026-04-14-comprehensive-audit.md  FINAL_CODE_REVIEW_2026-04-12.md  audit-fix-patchnotes.md  audit-hardening-changelog.md  audit-phase5-complete.md  calibration-phase.md  code-review-2026-04-12.md  code-review-fixes.md  code-review-phase7.md  container_limits_analysis.md  corpclaw-lite-design.md  future_features_backlog.md  hermes-agent-analysis.md  hermes-integration-analysis.md  l2-all-exports.md  phase2_status.md  references_guide.md  semantic-skill-selection.md  sprint-1-must.md  sprint-2-should.md  status-analysis-2026-03.md
plans/archive/: phase1-core.md  sprint-2-should.md
scripts/: fix_user_dept.py  install-hooks.sh
skills/: code_reviewer.md  content_writer.md  data_analyst.md  doc_writer.md  excel_filler.md  excel_normalizer.md  meeting_summary.md  translator.md
src/corpclaw_lite/: __init__.py  cli.py  exceptions.py  paths.py  templates.py
tests/: conftest.py  test_agent_loop.py  test_agent_memory.py  test_agent_worker.py  test_agent_worker_extra.py  test_atomic_write.py  test_b054_source_availability.py  test_bootstrap.py  test_budget_guard.py  test_builtin_tools.py  test_calibration.py  test_channels.py  test_chart_generate.py  test_cli.py  test_cli_commands.py  test_cli_more.py  test_compressor.py  test_config.py  test_consolidation.py  test_container_ipc.py  test_container_manager.py  test_container_proxy.py  test_containers.py  test_convert_format.py  test_corpus_fixtures.py  test_coverage_extras.py  test_db_busy_timeout.py  test_department_manager.py  test_diff_text.py  test_eval_judge.py  test_eval_loop.py  test_eval_report.py  test_eval_runner.py  test_eval_scenarios.py  test_eval_scenarios_expanded.py  test_eval_scorer.py  test_excel.py  test_excel_inspect.py  test_excel_workbook.py  test_exec_script.py  (+91 more)
tests/debug/: README.md  conftest.py  helpers.py  test_A_single_turn.py  test_B_tools.py  test_C_container.py  test_D_multistep.py  test_E_subagents.py  test_F_security.py  test_gemma4_preset.py
tests/eval_live/: conftest.py  test_eval_live_smoke.py
tests/live_llm/: README.md  __init__.py  conftest.py  helpers.py  test_01_server_and_slots.py  test_02_cache_file_roundtrip.py  test_03_cache_mismatch_validation.py  test_04_parallel_slots.py  test_05_router_cache_manager_live.py  test_06_prune_and_cleanup.py
(+182 files in other folders)
