[project]
name = "corpclaw-lite"
version = "0.1.0"
description = "CorpClaw Lite - streamlined agent project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "anthropic>=0.84.0",
    "anyio>=4.12.1",
    "docker>=7.1.0",
    "httpx>=0.28.1",
    "mcp>=1.26.0",
    "openai>=2.24.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-telegram-bot>=22.6",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "typer>=0.24.1",
    "watchdog>=6.0.0",
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = ".."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "G"]
