[project]
name = "corpclaw-lite"
version = "0.1.5"
description = "CorpClaw Lite - streamlined agent project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.84.0",
    "anyio>=4.12.1",
    "docker>=7.1.0",
    "httpx>=0.28.1",
    "mcp>=1.26.0",
    "openai>=2.24.0",
    "openpyxl>=3.1.5",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-telegram-bot>=22.6",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "telegramify-markdown>=0.5.4",
    "mistletoe>=1.4.0",
    "python-dotenv>=1.2.1",
    "aiohttp>=3.13.4",
    "duckdb>=1.1.0",
    "matplotlib>=3.9.0",
    "pypdf>=4.0.0",
    "ddgs>=9.14.4",
]

[project.scripts]
corpclaw-lite = "corpclaw_lite.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/corpclaw_lite"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--ignore=tests/debug --ignore=tests/live_llm"
markers = [
    "integration: Full pipeline integration test (requires LLM + optionally Docker)",
    "docker_required: Requires running Docker daemon and corpclaw-agent-base:latest image",
    "llm_required: Requires a real LLM provider (Anthropic API key or local Ollama)",
    "live_llm: Manual tests that require a real llama-server backend",
    "live_llm_slow: Slow manual tests that require CORPCLAW_LIVE_LLM_RUN_SLOW=1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "G", "A", "PERF"]

[dependency-groups]
dev = [
    "hatchling>=1.27.0",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.4",
]
